# gd-back

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deploy.sh
.github/workflows/: azure-static-web-apps-delightful-coast-02ea01f03.yml  azure-static-web-apps-red-island-075b17003.yml
src/: custom_extractor.rs  handlers.rs  main.rs  middlewares.rs  models.rs  routes.rs  utils.rs
